Updates Mongo Java Driver and replaces Mongo usage with MongoClient and MongoClientURI

--- a/core/src/main/resources/resource.properties
+++ b/core/src/main/resources/resource.properties
@@ -64,7 +64,7 @@ core.cache.enabled = true
 # Type: String
 # Default: localhost
 
-database.host = localhost
+database.host = mongodb://localhost
 
 # If required, the user to connect to the
 # database as.
