Makes the ConfigurationService API clearer, adds new exception for database failures.

--- a/admin-service/src/main/webapp/WEB-INF/web.xml
+++ b/admin-service/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
       http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
    id="WebApp_ID" version="3.0">
-   <display-name>rest</display-name>
+   <display-name>Hydra Admin Service</display-name>
    
    <context-param>
       <param-name>contextClass</param-name>
