Fixes wrongly declared MongoDB URL defaults

--- a/admin-service/src/main/resources/admin-service.properties
+++ b/admin-service/src/main/resources/admin-service.properties
@@ -17,7 +17,7 @@ admin.pipeline = pipeline
 # Type: String
 # Default: localhost
 
-database.url = localhost
+database.url = mongodb://localhost
 
 # If required, the user to connect to the
 # database as.
