--- a/stages/in/json-in/pom.xml
+++ b/stages/in/json-in/pom.xml
@@ -35,8 +35,8 @@
 
 		<dependency>
 			<groupId>junit</groupId>
-			<artifactId>junit-dep</artifactId>
-			<version>4.8.2</version>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
 			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
@@ -44,7 +44,7 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>1.8.5</version>
+			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
 
