--- a/stages/in/server/pom.xml
+++ b/stages/in/server/pom.xml
@@ -28,8 +28,8 @@
 
 		<dependency>
 			<groupId>junit</groupId>
-			<artifactId>junit-dep</artifactId>
-			<version>4.8.2</version>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
 			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
