--- a/stages/processing/web/pom.xml
+++ b/stages/processing/web/pom.xml
@@ -28,14 +28,14 @@
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
-			<artifactId>junit-dep</artifactId>
+			<artifactId>junit</artifactId>
 			<version>4.11</version>
             <scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>1.9.0-rc1</version>
+			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
         <dependency>
