--- a/admin-service/src/main/webapp/WEB-INF/web.xml
+++ b/admin-service/src/main/webapp/WEB-INF/web.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://java.sun.com/xml/ns/javaee"
-         xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-      http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-         id="WebApp_ID" version="3.0">
-    <display-name>rest</display-name>
-
+<web-app id="WebApp_ID" version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee       http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+    <display-name>Hydra Admin Service</display-name>
     <context-param>
         <param-name>contextClass</param-name>
         <param-value>
-            org.springframework.web.context.support.AnnotationConfigWebApplicationContext
-        </param-value>
+         org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+      </param-value>
     </context-param>
     <context-param>
         <param-name>contextConfigLocation</param-name>
@@ -22,14 +16,12 @@
     </listener>
     <filter>
         <filter-name>jsonpCallbackFilter</filter-name>
-        <filter-class>com.findwise.hydra.admin.rest.JsonpCallbackFilter</filter-class>
+        <filter-class>com.findwise.hydra.admin.rest.jsonp.JsonpCallbackFilter</filter-class>
     </filter>
-
     <filter-mapping>
         <filter-name>jsonpCallbackFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
     <servlet>
         <servlet-name>rest</servlet-name>
         <servlet-class>
@@ -46,8 +38,6 @@
             <param-value>com.findwise.hydra.admin.rest</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
-
-
     </servlet>
 
 
@@ -55,10 +45,7 @@
         <servlet-name>rest</servlet-name>
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
-
-
     <welcome-file-list>
-        <welcome-file />
+        <welcome-file/>
     </welcome-file-list>
-
 </web-app>
