--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>com.findwise.hydra</groupId>
 		<artifactId>hydra-parent</artifactId>
-		<version>0.4.0-SNAPSHOT</version>
+		<version>0.4.0</version>
 	</parent>
 
 	<artifactId>distribution</artifactId>
@@ -19,13 +17,13 @@
 		<dependency>
 			<groupId>com.findwise.hydra</groupId>
 			<artifactId>hydra-core</artifactId>
-			<version>0.4.0-SNAPSHOT</version>
+			<version>0.4.0</version>
 			<classifier>jar-with-dependencies</classifier>
 		</dependency>
 		<dependency>
 			<groupId>com.findwise.hydra</groupId>
 			<artifactId>hydra-inserter</artifactId>
-			<version>0.4.0-SNAPSHOT</version>
+			<version>0.4.0</version>
 			<classifier>jar-with-dependencies</classifier>
 		</dependency>
 	</dependencies>
@@ -42,12 +40,9 @@
 						<inherited>false</inherited>
 						<configuration>
 							<tasks>
-								<copy file="../core/target/hydra-core-jar-with-dependencies.jar"
-								    tofile="bin/hydra-core.jar"/>
-								<copy file="../core/target/resource.properties"
-									tofile="bin/resource.properties"/>
-								<copy file="../tools/inserter/target/hydra-inserter-jar-with-dependencies.jar"
-									tofile="tools/hydra-inserter.jar"/>
+								<copy file="../core/target/hydra-core-jar-with-dependencies.jar" tofile="bin/hydra-core.jar" />
+								<copy file="../core/target/resource.properties" tofile="bin/resource.properties" />
+								<copy file="../tools/inserter/target/hydra-inserter-jar-with-dependencies.jar" tofile="tools/hydra-inserter.jar" />
 							</tasks>
 						</configuration>
 						<goals>
