--- a/admin-service/pom.xml
+++ b/admin-service/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.findwise.hydra</groupId>
         <artifactId>hydra-parent</artifactId>
-        <version>0.4.0</version>
+        <version>0.5.0-SNAPSHOT</version>
     </parent>
     <artifactId>hydra-admin-service</artifactId>
     <packaging>war</packaging>
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>com.findwise.hydra</groupId>
             <artifactId>hydra-database</artifactId>
-            <version>0.4.0</version>
+            <version>0.5.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -71,7 +71,7 @@
         <dependency>
             <groupId>com.findwise.hydra</groupId>
             <artifactId>hydra-mongodb</artifactId>
-            <version>0.4.0</version>
+            <version>0.5.0-SNAPSHOT</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
