--- a/stages/processing/basic/pom.xml
+++ b/stages/processing/basic/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.findwise.hydra</groupId>
 		<artifactId>stages</artifactId>
-		<version>0.4.0</version>
+		<version>0.5.0-SNAPSHOT</version>
 		<relativePath>../..</relativePath>
 	</parent>
 
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>com.findwise.hydra</groupId>
             <artifactId>hydra-api</artifactId>
-            <version>0.4.0</version>
+            <version>0.5.0-SNAPSHOT</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
