Big rewrite of api
* StageStarter is now the Main class

* Stages no longer have access to RemotePipeline.
  To discard a document, call LocalDocument#discard
  To get document attachments, call LocalDocument#getFile et.al.

* Now uses Guava Service. This simplifies the logic for shutting
  down threads.

--- a/stages/processing/basic/pom.xml
+++ b/stages/processing/basic/pom.xml
@@ -13,9 +13,9 @@
 	<name>${project.artifactId}</name>
 	<description>Basic Stages - A package of basic stages for Hydra</description>
 
-	<properties>
-		<main.class>com.findwise.hydra.stage.AbstractStage</main.class>
-	</properties>
+    <properties>
+        <main.class>com.findwise.hydra.stage.StageStarter</main.class>
+    </properties>
 
 	<dependencies>
 		<dependency>
