--- a/api/pom.xml
+++ b/api/pom.xml
@@ -57,6 +57,11 @@
 			<version>2.4</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>15.0</version>
+		</dependency>
 	</dependencies>
 
 
