--- a/stages/utils/http/pom.xml
+++ b/stages/utils/http/pom.xml
@@ -3,13 +3,15 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.findwise.hydra</groupId>
-		<artifactId>hydra-parent</artifactId>
+		<artifactId>stages</artifactId>
 		<version>0.5.0-SNAPSHOT</version>
+		<relativePath>../..</relativePath>
 	</parent>
-	<artifactId>hydra-api</artifactId>
+	<artifactId>hydra-http-utils</artifactId>
 	<packaging>jar</packaging>
+
 	<name>${project.artifactId}</name>
-	<description>Hydra API</description>
+	<description>Hydra HTTP Utilities</description>
 
 	<dependencies>
 		<dependency>
@@ -18,14 +20,19 @@
 			<version>4.2.1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient-cache</artifactId>
+			<version>4.2.1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>1.7.1</version>
 		</dependency>
 		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.0.10</version>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -35,26 +42,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
+			<artifactId>mockito-core</artifactId>
 			<version>1.9.5</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.github.tomakehurst</groupId>
-			<artifactId>wiremock</artifactId>
-			<version>1.33</version>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>junit</groupId>
-					<artifactId>junit-dep</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.4</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
