--- a/stages/processing/basic/pom.xml
+++ b/stages/processing/basic/pom.xml
@@ -48,18 +48,24 @@
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
-			<version>1.6</version>
-			<type>jar</type>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.1</version>
-			<type>jar</type>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+                        <version>1.6</version>
+                        <type>jar</type>
+                        <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>commons-lang</groupId>
+                    <artifactId>commons-lang</artifactId>
+                    <version>2.1</version>
+                    <type>jar</type>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>joda-time</groupId>
+                    <artifactId>joda-time</artifactId>
+                    <version>2.3</version>
+                    <type>jar</type>
+                </dependency>
+        </dependencies>
 
 	<build>
 		<finalName>${project.name}</finalName>
