--- a/stages/processing/basic/pom.xml
+++ b/stages/processing/basic/pom.xml
@@ -52,6 +52,12 @@
             <type>jar</type>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.3</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
