--- a/admin-service/pom.xml
+++ b/admin-service/pom.xml
@@ -17,9 +17,9 @@
 		<finalName>hydra</finalName>
 		<plugins>
 			<plugin>
-				<groupId>org.eclipse.jetty</groupId>
+				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.0.5.v20130815</version>
+				<version>8.1.14.v20131031</version>
 				<configuration>
 					<scanIntervalSeconds>10</scanIntervalSeconds>
 					<webApp>
@@ -99,6 +99,26 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
+        <!--  Web dependencies -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>handlebars</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>1.11.0</version>
+        </dependency>
+
+        <!--  Testing -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
