--- a/database/pom.xml
+++ b/database/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.findwise.hydra</groupId>
 		<artifactId>hydra-parent</artifactId>
-		<version>0.5.0-SNAPSHOT</version>
+		<version>0.4.1</version>
 	</parent>
 	<artifactId>hydra-database</artifactId>
 	<packaging>jar</packaging>
@@ -14,7 +14,7 @@
 		<dependency>
 			<groupId>com.findwise.hydra</groupId>
 			<artifactId>hydra-api</artifactId>
-			<version>0.5.0-SNAPSHOT</version>
+			<version>0.4.1</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
