--- a/test-suite/integration-test-stages/pom.xml
+++ b/test-suite/integration-test-stages/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>hydra-test-suite</artifactId>
 		<groupId>com.findwise.hydra</groupId>
-		<version>0.4.1</version>
+		<version>0.4.2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>integration-test-stages</artifactId>
