--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -7,7 +7,7 @@
 		<version>0.5.0-SNAPSHOT</version>
 	</parent>
     <artifactId>hydra-examples</artifactId>
-    <name>${artifactId}</name>
+    <name>${project.artifactId}</name>
     <description>Contains scripts to perform certain manual tests</description>
 
     <dependencies>
