--- a/tools/inserter/pom.xml
+++ b/tools/inserter/pom.xml
@@ -6,7 +6,7 @@
 		<version>0.5.0-SNAPSHOT</version>
 	</parent>
     <artifactId>hydra-inserter</artifactId>
-    <name>${artifactId}</name>
+    <name>${project.artifactId}</name>
     <description>Command-line configuration tool</description>
 
     <build>
