--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -7,7 +7,7 @@
 		<version>0.5.0-SNAPSHOT</version>
 	</parent>
     <artifactId>tools</artifactId>
-    <name>${artifactId}</name>
+    <name>${project.artifactId}</name>
     <description>Tools for interacting with and setting up Hydra</description>
     <packaging>pom</packaging>
 
