--- a/stages/pom.xml
+++ b/stages/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.findwise.hydra</groupId>
 		<artifactId>hydra-parent</artifactId>
-		<version>0.4.2-SNAPSHOT</version>
+		<version>0.4.2</version>
 	</parent>
     <artifactId>stages</artifactId>
     <packaging>pom</packaging>
