--- a/stages/in/json-in/pom.xml
+++ b/stages/in/json-in/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.findwise.hydra</groupId>
 		<artifactId>stages</artifactId>
-		<version>0.4.3</version>
+		<version>0.4.4-SNAPSHOT</version>
 		<relativePath>../..</relativePath>
 	</parent>
     <artifactId>hydra-json-input</artifactId>
@@ -15,13 +15,13 @@
         <dependency>
             <groupId>com.findwise.hydra</groupId>
             <artifactId>hydra-api</artifactId>
-            <version>0.4.3</version>
+            <version>0.4.4-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.findwise.hydra</groupId>
             <artifactId>hydra-input-server</artifactId>
-            <version>0.4.3</version>
+            <version>0.4.4-SNAPSHOT</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
