Adds RaceConditionIT for issue 349 and makes the number of io threads configurable

--- a/core/src/main/resources/resource.properties
+++ b/core/src/main/resources/resource.properties
@@ -50,6 +50,13 @@ core.cache.enabled = true
 
 # core.communication_port = 12001
 
+# Number of threads to use for core-to-stage communication
+#
+# Type: Integer
+# Default: Number of available processors
+
+# core.rest.thread_count = 32
+
 ######################################
 # Settings for the backing database. #
 ######################################
