--- a/test-suite/functional-tests/pom.xml
+++ b/test-suite/functional-tests/pom.xml
@@ -33,6 +33,12 @@
 			<version>1.0.13</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>18.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
